--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -1,100 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+    Copyright (c) 2016, The Linux Foundation. All rights reserved.
+    Redistribution and use in source and binary forms, with or without
+    modification, are permitted provided that the following conditions are
+    met:
+        * Redistributions of source code must retain the above copyright
+          notice, this list of conditions and the following disclaimer.
+        * Redistributions in binary form must reproduce the above
+          copyright notice, this list of conditions and the following
+          disclaimer in the documentation and/or other materials provided
+          with the distribution.
+        * Neither the name of The Linux Foundation nor the names of its
+          contributors may be used to endorse or promote products derived
+          from this software without specific prior written permission.
+    THIS SOFTWARE IS PROVIDED "AS IS" AND ANY EXPRESS OR IMPLIED
+    WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
+    MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT
+    ARE DISCLAIMED.  IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS
+    BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+    CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+    SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
+    BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
+    WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
+    OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
+    IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE
+-->
+
+
 <device name="Android">
-    <item name="none">0</item>
-    <item name="screen.on">64.19</item>
-    <item name="screen.full">108.3</item>
-    <item name="bluetooth.active">9.22</item>
-    <item name="bluetooth.on">1.17</item>
-    <item name="wifi.on">0.52</item>
-    <item name="wifi.active">476.28</item>
-    <item name="wifi.scan">21.3</item>
-    <item name="dsp.audio">19.9</item>
-    <item name="dsp.video">40.99</item>
-    <item name="camera.flashlight">160</item>
-    <item name="camera.avg">586</item>
-    <item name="gps.on">132.43</item>
-    <item name="radio.active">134.84</item>
-    <item name="radio.scanning">33.23</item>
-    <array name="radio.on">
-        <value>5.59</value>
-        <value>5.59</value>
-    </array>
-    <item name="modem.controller.idle">0</item>
-    <item name="modem.controller.rx">0</item>
-    <item name="modem.controller.tx">0</item>
-    <item name="modem.controller.voltage">0</item>
-    <array name="cpu.clusters.cores">
-        <value>6</value>
-        <value>2</value>
-    </array>
-    <array name="cpu.core_speeds.cluster0">
-        <value>300000</value>
-        <value>576000</value>
-        <value>748000</value>
-        <value>998400</value>
-        <value>1209600</value>
-        <value>1324800</value>
-        <value>1516800</value>
-        <value>1612800</value>
-        <value>1780000</value>
-    </array>
-    <array name="cpu.core_power.cluster0">
-        <value>31.84</value>
-        <value>35.91</value>
-        <value>37.69</value>
-        <value>45.77</value>
-        <value>53.89</value>
-        <value>59.62</value>
-        <value>66.80</value>
-        <value>72.52</value>
-        <value>80.99</value>
-    </array>
-    <array name="cpu.core_speeds.cluster1">
-        <value>300000</value>
-        <value>652800</value>
-        <value>825600</value>
-        <value>979200</value>
-        <value>1132800</value>
-        <value>1363200</value>
-        <value>1536000</value>
-        <value>1747200</value>
-        <value>1843200</value>
-        <value>1996800</value>
-        <value>2054400</value>
-        <value>2169600</value>
-        <value>2208000</value>
-    </array>
-    <array name="cpu.core_power.cluster1">
-        <value>45.40</value>
-        <value>62.55</value>
-        <value>70.92</value>
-        <value>82.33</value>
-        <value>94.85</value>
-        <value>122.35</value>
-        <value>146.60</value>
-        <value>181.52</value>
-        <value>214.29</value>
-        <value>245.88</value>
-        <value>282.33</value>
-        <value>322.98</value>
-        <value>333.66</value>
-    </array>
-    <item name="cpu.awake">9.6</item>
-    <item name="cpu.idle">6.44</item>
-    <array name="memory.bandwidths">
-        <value>22.7</value>
-    </array>
-    <item name="battery.capacity">3120</item>
-    <item name="wifi.controller.idle">0</item>
-    <item name="wifi.controller.rx">0</item>
-    <item name="wifi.controller.tx">0</item>
-    <array name="wifi.controller.tx_levels" />
-    <item name="wifi.controller.voltage">0</item>
-    <array name="wifi.batchedscan">
-        <value>.0002</value>
-        <value>.002</value>
-        <value>.02</value>
-        <value>.2</value>
-        <value>2</value>
-    </array>
+  <!-- Most values are the incremental current used by a feature,
+       in mA (measured at nominal voltage).
+       The default values are deliberately incorrect dummy values.
+       OEM's must measure and provide actual values before
+       shipping a device.
+       Example real-world values are given in comments, but they
+       are totally dependent on the platform and can vary
+       significantly, so should be measured on the shipping platform
+       with a power meter. -->
+  <item name="none">0</item>
+  <item name="screen.on">63</item>  <!-- ~200mA -->
+  <item name="screen.full">261</item>  <!-- ~300mA -->
+
+  <!-- A list of heterogeneous CPU clusters, where the value for each cluster represents the
+       number of CPU cores for that cluster.
+       Ex:
+       <array name="cpu.clusters.cores">
+         <value>4</value> // cluster 0 has cpu0, cpu1, cpu2, cpu3
+         <value>2</value> // cluster 1 has cpu4, cpu5
+       </array> -->
+  <array name="cpu.clusters.cores">
+      <value>6</value> <!-- cluster 0 has cpu0, cpu1, cpu2, cpu3, cpu4, cpu5 -->
+      <value>2</value> <!-- cluster 1 has cpu6, cpu7 -->
+  </array>
+
+    <!-- Different CPU speeds for cluster 0 as reported in
+       /sys/devices/system/cpu/cpu0/cpufreq/stats/time_in_state.
+       There must be one of these for each cluster, labeled:
+       cpu.speeds.cluster0, cpu.speeds.cluster1, etc... -->
+  <array name="cpu.speeds.cluster0">
+      <value>300000</value>   <!-- 300  MHz CPU speed -->
+      <value>576000</value>   <!-- 576  MHz CPU speed -->
+      <value>748800</value>  <!-- 744.8 MHz CPU speed -->
+      <value>998400</value>  <!-- 998.4 MHz CPU speed -->
+      <value>1209600</value>  <!-- 1209.6 MHz CPU speed -->
+      <value>1324800</value>  <!-- 1324.8 MHz CPU speed -->
+      <value>1516800</value>  <!-- 1516.8 MHz CPU speed -->
+      <value>1612800</value>  <!-- 1612.8 MHz CPU speed -->
+      <value>1708800</value>  <!-- 1708.8 MHz CPU speed -->
+  </array>
+
+  <!-- Current at each CPU speed for cluster 0, as per 'cpu.speeds.cluster0'.
+       Like cpu.speeds.cluster0, there must be one of these present for
+       each heterogeneous CPU cluster. -->
+  <array name="cpu.active.cluster0">
+      <value>14</value>  <!-- ~14mA -->
+      <value>25</value>  <!-- ~25mA -->
+      <value>31</value>  <!-- ~31mA -->
+      <value>46</value>  <!-- ~46mA -->
+      <value>57</value>  <!-- ~57mA -->
+      <value>84</value>  <!-- ~84mA -->
+      <value>96</value>  <!-- ~96mA -->
+      <value>114</value>  <!-- ~114mA -->
+      <value>139</value>  <!-- ~139mA -->
+  </array>
+
+   <array name="cpu.speeds.cluster1">
+      <value>300000</value>  <!-- 300  MHz CPU speed -->
+      <value>652800</value>  <!-- 652  MHz CPU speed -->
+      <value>852600</value>  <!-- 852  MHz CPU speed -->
+      <value>979200</value>  <!-- 979  MHz CPU speed -->
+      <value>1132800</value>  <!-- 1132  MHz CPU speed -->
+      <value>1363200</value>  <!-- 1363  MHz CPU speed -->
+      <value>1536000</value>  <!-- 1536  MHz CPU speed -->
+      <value>1747200</value>  <!-- 1747  MHz CPU speed -->
+      <value>1843200</value>  <!-- 1843  MHz CPU speed -->
+      <value>1996800</value>  <!-- 1996  MHz CPU speed -->
+      <value>2054400</value>  <!-- 2054  MHz CPU speed -->
+      <value>2169600</value>  <!-- 2169  MHz CPU speed -->
+      <value>2208000</value>  <!-- 2208  MHz CPU speed -->
+  </array>
+
+  <!-- Current at each CPU speed for cluster 1, as per 'cpu.speeds.cluster1'.
+       Like cpu.speeds.cluster1, there must be one of these present for
+       each heterogeneous CPU cluster. -->
+  <array name="cpu.active.cluster1">
+      <value>256</value>  <!-- ~256mA -->
+      <value>307</value>  <!-- ~307mA -->
+      <value>332</value>  <!-- ~332mA -->
+      <value>382</value>  <!-- ~382mA -->
+      <value>408</value>  <!-- ~408mA -->
+      <value>448</value>  <!-- ~448mA -->
+      <value>586</value>  <!-- ~586mA -->
+      <value>641</value>  <!-- ~641mA -->
+      <value>659</value>  <!-- ~659mA -->
+      <value>696</value>  <!-- ~696mA -->
+      <value>876</value>  <!-- ~876mA -->
+      <value>900</value>  <!-- ~900mA -->
+      <value>924</value>  <!-- ~924mA -->
+      <value>948</value>  <!-- ~948mA -->
+      <value>1170</value>  <!-- ~1170mA -->
+      <value>1200</value>  <!-- ~1200mA -->
+      <value>1300</value>  <!-- ~1300mA -->
+      <value>1400</value>  <!-- ~1400mA -->
+
+  </array>
+
+  <!-- Current when CPU is awake -->
+  <item name="cpu.awake">1.6</item>
+  <!-- Current when CPU is idle -->
+  <item name="cpu.idle">0.1</item>
+
+  <!-- This is the battery capacity in mAh (measured at nominal voltage) -->
+  <item name="battery.capacity">3120</item>
+
 </device>
